--- a/Captura/webapp/templates/base.html
+++ b/Captura/webapp/templates/base.html
@@ -14,14 +14,15 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-success fixed-top bg-nav">
         <div class="container-fluid">
-            <a href="#" class="navbar-brand">Home</a>
+            <a href="{% url 'webapp:base' %}" class="navbar-brand">Home</a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#idMenu" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div id="idMenu" class="collapse navbar-collapse justify-content-end mx-4">
                 <ul class="navbar-nav">
+                    {% if active_page == 'base' %}
                     <li class="nav-item">
-                        <a href="#galeria" class="nav-link">Galería</a>
+                        <a href="#galeria" class="nav-link">Galerías</a>
                     </li>
                     <li class="nav-item">
                         <a href="#sobreMi" class="nav-link">Sobre mí</a>
@@ -35,12 +36,21 @@
                     <li class="nav-item">
                         <a href="#contacto" class="nav-link">Contacto</a>
                     </li>
+                    {% elif active_page == 'categorias' %}
+                    <li class="nav-item">
+                        <a href="{% url 'webapp:base' %}" class="nav-link">Principal</a>
+                    </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
     </nav>
-    {% block index %} {% block portada %} {% endblock portada %} {% block galeria %} {% endblock galeria %} {% block sobreMi %} {% endblock sobreMi %} {% block testimonios %} {% endblock testimonios %} {% block blog %} {% endblock blog %} {% endblock index%}
-    {% block contacto %} {% endblock contacto %}
+    <div class="p-0 m-0">
+        <main class="container mt-3">
+            {% block index %} {% block portada %} {% endblock portada %} {% block galeria %} {% endblock galeria %} {% block sobreMi %} {% endblock sobreMi %} {% block testimonios %} {% endblock testimonios %} {% block blog %} {% endblock blog %} {% endblock index%}
+            {% block categorias %} {% endblock categorias %} {% block contacto %} {% endblock contacto %}
+        </main>
+    </div>
     <script src="{% static 'js/base.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
